# comp0250CW2

cw2_team_8/: CMakeLists.txt  package.xml
cw2_team_8/data/: cross_40mm.pcd  nought_40mm.pcd
cw2_team_8/include/: cw2_class.h
cw2_team_8/launch/: run_solution.launch  run_solution.launch.py
cw2_team_8/scripts/: stl2pcd.py
cw2_team_8/src/: cw2_class.cpp  cw2_node.cpp
